Updated kernel and uboot to Martin Cerveny repos
- Updated kernel and uboot buildroot recipes to use Martin Cerveny's WX8
  updated versions.
- Kernel and uboot are now compiled as part of the configuration
  (updated ps5000_sdcard_defconfig)
- Updated moonlight version to be compatible with latest GeForce
  Experience

--- a/buildroot/configs/ps5000_sdcard_defconfig
+++ b/buildroot/configs/ps5000_sdcard_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2018.02-rc3-g6ef1273e-dirty Configuration
+# Buildroot 2018.02-rc3-g0f09f1c8-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_5=y
@@ -245,21 +245,18 @@ BR2_TOOLCHAIN_BUILDROOT_LIBC="glibc"
 #
 # Kernel Header Options
 #
-# BR2_KERNEL_HEADERS_3_0 is not set
+# BR2_KERNEL_HEADERS_AS_KERNEL is not set
 # BR2_KERNEL_HEADERS_3_2 is not set
+# BR2_KERNEL_HEADERS_3_4 is not set
+# BR2_KERNEL_HEADERS_3_10 is not set
+# BR2_KERNEL_HEADERS_3_12 is not set
 # BR2_KERNEL_HEADERS_4_1 is not set
 BR2_KERNEL_HEADERS_4_4=y
 # BR2_KERNEL_HEADERS_4_9 is not set
 # BR2_KERNEL_HEADERS_4_10 is not set
 # BR2_KERNEL_HEADERS_4_11 is not set
-# BR2_KERNEL_HEADERS_4_12 is not set
-# BR2_KERNEL_HEADERS_4_13 is not set
-# BR2_KERNEL_HEADERS_4_14 is not set
-# BR2_KERNEL_HEADERS_4_16 is not set
-# BR2_KERNEL_HEADERS_4_18 is not set
-# BR2_KERNEL_HEADERS_4_19 is not set
 # BR2_KERNEL_HEADERS_VERSION is not set
-BR2_DEFAULT_KERNEL_HEADERS="4.4.118"
+BR2_DEFAULT_KERNEL_HEADERS="4.4.78"
 BR2_PACKAGE_LINUX_HEADERS=y
 BR2_PACKAGE_GLIBC=y
 BR2_PACKAGE_GLIBC_GEN_LD_CACHE=y
@@ -278,9 +275,10 @@ BR2_BINUTILS_EXTRA_CONFIG_OPTIONS=""
 #
 # GCC Options
 #
+# BR2_GCC_VERSION_6_X is not set
+# BR2_GCC_VERSION_7_X is not set
 # BR2_GCC_VERSION_8_X is not set
 BR2_GCC_VERSION_9_X=y
-# BR2_GCC_VERSION_10_X is not set
 BR2_GCC_SUPPORTS_DLANG=y
 BR2_GCC_VERSION="9.3.0"
 BR2_EXTRA_GCC_CONFIG_OPTIONS=""
@@ -432,16 +430,47 @@ BR2_ROOTFS_POST_SCRIPT_ARGS="ps5000_sdcard"
 #
 # Kernel
 #
-# BR2_LINUX_KERNEL is not set
+BR2_LINUX_KERNEL=y
+BR2_LINUX_KERNEL_USE_DEFCONFIG=y
+# BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG is not set
+# BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
+BR2_LINUX_KERNEL_DEFCONFIG="wx8"
+BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES=""
+# BR2_LINUX_KERNEL_UIMAGE is not set
+# BR2_LINUX_KERNEL_APPENDED_UIMAGE is not set
+BR2_LINUX_KERNEL_ZIMAGE=y
+# BR2_LINUX_KERNEL_APPENDED_ZIMAGE is not set
+# BR2_LINUX_KERNEL_VMLINUX is not set
+# BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM is not set
+BR2_LINUX_KERNEL_GZIP=y
+# BR2_LINUX_KERNEL_LZ4 is not set
+# BR2_LINUX_KERNEL_LZMA is not set
+# BR2_LINUX_KERNEL_LZO is not set
+# BR2_LINUX_KERNEL_XZ is not set
+BR2_LINUX_KERNEL_DTS_SUPPORT=y
+BR2_LINUX_KERNEL_USE_INTREE_DTS=y
+# BR2_LINUX_KERNEL_USE_CUSTOM_DTS is not set
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="rk3128-wx8"
+# BR2_LINUX_KERNEL_INSTALL_TARGET is not set
+
+#
+# Linux Kernel Extensions
+#
+# BR2_LINUX_KERNEL_EXT_XENOMAI is not set
+# BR2_LINUX_KERNEL_EXT_RTAI is not set
+# BR2_LINUX_KERNEL_EXT_EV3DEV_LINUX_DRIVERS is not set
+# BR2_LINUX_KERNEL_EXT_FBTFT is not set
+# BR2_LINUX_KERNEL_EXT_AUFS is not set
 # BR2_LINUX_KERNEL_LATEST_VERSION is not set
 # BR2_LINUX_KERNEL_LATEST_CIP_VERSION is not set
 # BR2_LINUX_KERNEL_CUSTOM_VERSION is not set
-BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
-# BR2_LINUX_KERNEL_CUSTOM_GIT is not set
+# BR2_LINUX_KERNEL_CUSTOM_TARBALL is not set
+BR2_LINUX_KERNEL_CUSTOM_GIT=y
 # BR2_LINUX_KERNEL_CUSTOM_HG is not set
 # BR2_LINUX_KERNEL_CUSTOM_SVN is not set
-BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="https://cdn.kernel.org/pub/linux/kernel/v4.x/linux-4.4.118.tar.gz"
-BR2_LINUX_KERNEL_VERSION="custom"
+BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/mcerveny/rockchip-linux.git"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="a343afcf5cf8e3f3547cef99cdc40086272bc6e0"
+BR2_LINUX_KERNEL_VERSION="a343afcf5cf8e3f3547cef99cdc40086272bc6e0"
 BR2_LINUX_KERNEL_PATCH=""
 
 #
@@ -862,10 +891,7 @@ BR2_PACKAGE_SOX=y
 # BR2_PACKAGE_UDPXY is not set
 # BR2_PACKAGE_UPMPDCLI is not set
 # BR2_PACKAGE_V4L2GRAB is not set
-
-#
-# v4l2loopback needs a Linux kernel to be built
-#
+# BR2_PACKAGE_V4L2LOOPBACK is not set
 BR2_PACKAGE_VLC=y
 # BR2_PACKAGE_VORBIS_TOOLS is not set
 # BR2_PACKAGE_WAVPACK is not set
@@ -908,10 +934,7 @@ BR2_PACKAGE_GOOGLE_BREAKPAD_ARCH_SUPPORTS=y
 # BR2_PACKAGE_GOOGLE_BREAKPAD is not set
 # BR2_PACKAGE_IOZONE is not set
 # BR2_PACKAGE_KEXEC is not set
-
-#
-# ktap needs a Linux kernel to be built
-#
+# BR2_PACKAGE_KTAP is not set
 BR2_PACKAGE_KVM_UNIT_TESTS_ARCH_SUPPORTS=y
 # BR2_PACKAGE_KVM_UNIT_TESTS is not set
 # BR2_PACKAGE_LATENCYTOP is not set
@@ -921,10 +944,7 @@ BR2_PACKAGE_LTP_TESTSUITE_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LTP_TESTSUITE is not set
 # BR2_PACKAGE_LTRACE is not set
 # BR2_PACKAGE_LTTNG_BABELTRACE is not set
-
-#
-# lttng-modules needs a Linux kernel to be built
-#
+# BR2_PACKAGE_LTTNG_MODULES is not set
 # BR2_PACKAGE_LTTNG_TOOLS is not set
 # BR2_PACKAGE_MBW is not set
 # BR2_PACKAGE_MEMSTAT is not set
@@ -942,10 +962,7 @@ BR2_PACKAGE_OPROFILE_ARCH_SUPPORTS=y
 BR2_PACKAGE_STRACE=y
 # BR2_PACKAGE_STRESS is not set
 # BR2_PACKAGE_STRESS_NG is not set
-
-#
-# sysdig needs a toolchain w/ C++, gcc >= 4.8, dynamic library and a Linux kernel to be built
-#
+# BR2_PACKAGE_SYSDIG is not set
 # BR2_PACKAGE_TCF_AGENT is not set
 BR2_PACKAGE_TCF_AGENT_ARCH="arm"
 BR2_PACKAGE_TCF_AGENT_ARCH_SUPPORTS=y
@@ -997,10 +1014,7 @@ BR2_PACKAGE_MAKE=y
 #
 # Filesystem and flash utilities
 #
-
-#
-# aufs-util needs a linux kernel and a toolchain w/ threads
-#
+# BR2_PACKAGE_AUFS_UTIL is not set
 # BR2_PACKAGE_AUTOFS is not set
 # BR2_PACKAGE_BTRFS_PROGS is not set
 # BR2_PACKAGE_CIFS_UTILS is not set
@@ -1212,10 +1226,7 @@ BR2_PACKAGE_FBV_GIF=y
 # BR2_PACKAGE_FREERDP is not set
 # BR2_PACKAGE_GL4ES is not set
 # BR2_PACKAGE_IMAGEMAGICK is not set
-
-#
-# linux-fusion needs a Linux kernel to be built
-#
+# BR2_PACKAGE_LINUX_FUSION is not set
 BR2_PACKAGE_MESA3D=y
 # BR2_PACKAGE_MESA3D_LLVM is not set
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER=y
@@ -1358,10 +1369,7 @@ BR2_PACKAGE_XKEYBOARD_CONFIG=y
 # BR2_PACKAGE_WILC1000_FIRMWARE is not set
 # BR2_PACKAGE_WILINK_BT_FIRMWARE is not set
 # BR2_PACKAGE_ZD1211_FIRMWARE is not set
-
-#
-# a10disp needs a Linux kernel to be built
-#
+# BR2_PACKAGE_A10DISP is not set
 # BR2_PACKAGE_ACPICA is not set
 # BR2_PACKAGE_ACPITOOL is not set
 # BR2_PACKAGE_AER_INJECT is not set
@@ -1374,18 +1382,8 @@ BR2_PACKAGE_XKEYBOARD_CONFIG=y
 # BR2_PACKAGE_CDRKIT is not set
 # BR2_PACKAGE_CRYPTSETUP is not set
 # BR2_PACKAGE_CWIID is not set
-
-#
-# dahdi-linux needs a Linux kernel to be built
-#
-
-#
-# dahdi-tools needs a toolchain w/ threads
-#
-
-#
-# dahdi-tools needs a Linux kernel to be built
-#
+# BR2_PACKAGE_DAHDI_LINUX is not set
+# BR2_PACKAGE_DAHDI_TOOLS is not set
 BR2_PACKAGE_DBUS=y
 BR2_PACKAGE_DBUS_CPP=y
 # BR2_PACKAGE_DBUS_GLIB is not set
@@ -1423,20 +1421,14 @@ BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_INPUT_EVENT_DAEMON=y
 # BR2_PACKAGE_IOSTAT is not set
 # BR2_PACKAGE_IPMITOOL is not set
-
-#
-# iqvlinux needs a Linux kernel to be built
-#
+# BR2_PACKAGE_IQVLINUX is not set
 # BR2_PACKAGE_IRDA_UTILS is not set
 # BR2_PACKAGE_KBD is not set
 # BR2_PACKAGE_LCDPROC is not set
 # BR2_PACKAGE_LIBUIO is not set
 BR2_PACKAGE_LIBUMP=y
 # BR2_PACKAGE_LINUXCONSOLETOOLS is not set
-
-#
-# linux-backports needs a Linux kernel to be built
-#
+# BR2_PACKAGE_LINUX_BACKPORTS is not set
 # BR2_PACKAGE_LIRC_TOOLS is not set
 # BR2_PACKAGE_LM_SENSORS is not set
 # BR2_PACKAGE_LSHW is not set
@@ -1460,10 +1452,6 @@ BR2_PACKAGE_MEMTESTER=y
 # BR2_PACKAGE_OPENOCD is not set
 
 #
-# owl-linux needs a Linux kernel to be built
-#
-
-#
 # owl-linux is only supported on ARM9 architecture
 #
 # BR2_PACKAGE_PARTED is not set
@@ -1478,26 +1466,11 @@ BR2_PACKAGE_MEMTESTER=y
 # BR2_PACKAGE_RNG_TOOLS is not set
 # BR2_PACKAGE_RPI_USERLAND is not set
 # BR2_PACKAGE_RS485CONF is not set
-
-#
-# rtl8188eu needs a Linux kernel to be built
-#
-
-#
-# rtl8723bs needs a Linux kernel to be built
-#
-
-#
-# rtl8723bu needs a Linux kernel to be built
-#
-
-#
-# rtl8821au needs a Linux kernel to be built
-#
-
-#
-# rtl8189fs needs a Linux kernel to be built
-#
+# BR2_PACKAGE_RTL8188EU is not set
+# BR2_PACKAGE_RTL8723BS is not set
+# BR2_PACKAGE_RTL8723BU is not set
+# BR2_PACKAGE_RTL8821AU is not set
+# BR2_PACKAGE_RTL8189FS is not set
 # BR2_PACKAGE_SANE_BACKENDS is not set
 # BR2_PACKAGE_SDPARM is not set
 # BR2_PACKAGE_SETSERIAL is not set
@@ -1517,14 +1490,8 @@ BR2_PACKAGE_MEMTESTER=y
 #
 # targetcli-fb depends on Python
 #
-
-#
-# ti-gfx needs a glibc toolchain and a Linux kernel to be built
-#
-
-#
-# ti-sgx-km needs a Linux kernel to be built
-#
+# BR2_PACKAGE_TI_GFX is not set
+# BR2_PACKAGE_TI_SGX_KM is not set
 
 #
 # ti-sgx-um needs the ti-sgx-km driver
@@ -1534,10 +1501,7 @@ BR2_PACKAGE_MEMTESTER=y
 # BR2_PACKAGE_TRIGGERHAPPY is not set
 # BR2_PACKAGE_UBOOT_TOOLS is not set
 # BR2_PACKAGE_UBUS is not set
-
-#
-# uccp420wlan needs a Linux kernel >= 4.2 to be built
-#
+# BR2_PACKAGE_UCCP420WLAN is not set
 BR2_PACKAGE_HAS_UDEV=y
 # BR2_PACKAGE_UDISKS is not set
 # BR2_PACKAGE_UHUBCTL is not set
@@ -1548,12 +1512,10 @@ BR2_PACKAGE_USBMOUNT=y
 # BR2_PACKAGE_USBMOUNT_SYNC is not set
 # BR2_PACKAGE_USBUTILS is not set
 # BR2_PACKAGE_W_SCAN is not set
+# BR2_PACKAGE_WF111 is not set
 # BR2_PACKAGE_WIPE is not set
 # BR2_PACKAGE_XORRISO is not set
-
-#
-# xr819-xradio driver needs a Linux kernel to be built
-#
+# BR2_PACKAGE_XR819_XRADIO is not set
 BR2_PACKAGE_PM_UTILS=y
 
 #
@@ -1656,7 +1618,8 @@ BR2_PACKAGE_LIBVORBIS=y
 BR2_PACKAGE_OPENAL_ARCH_SUPPORTS=y
 # BR2_PACKAGE_OPENAL is not set
 # BR2_PACKAGE_OPENCORE_AMR is not set
-# BR2_PACKAGE_OPUS is not set
+BR2_PACKAGE_OPUS=y
+BR2_PACKAGE_OPUS_FIXED_POINT=y
 # BR2_PACKAGE_OPUSFILE is not set
 # BR2_PACKAGE_PORTAUDIO is not set
 # BR2_PACKAGE_SBC is not set
@@ -1694,10 +1657,7 @@ BR2_PACKAGE_PROVIDES_HOST_ZLIB="host-libzlib"
 BR2_PACKAGE_BOTAN_ARCH_SUPPORTS=y
 # BR2_PACKAGE_BOTAN is not set
 # BR2_PACKAGE_CA_CERTIFICATES is not set
-
-#
-# cryptodev needs a Linux kernel to be built
-#
+# BR2_PACKAGE_CRYPTODEV is not set
 # BR2_PACKAGE_GCR is not set
 # BR2_PACKAGE_GNUTLS is not set
 # BR2_PACKAGE_LIBASSUAN is not set
@@ -1917,7 +1877,8 @@ BR2_PACKAGE_WEBKITGTK_ARCH_SUPPORTS=y
 BR2_PACKAGE_LIBAIO_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBAIO is not set
 # BR2_PACKAGE_LIBATASMART is not set
-# BR2_PACKAGE_LIBCEC is not set
+BR2_PACKAGE_LIBCEC=y
+BR2_PACKAGE_LIBENET=y
 # BR2_PACKAGE_LIBFREEFARE is not set
 # BR2_PACKAGE_LIBFTDI is not set
 # BR2_PACKAGE_LIBFTDI1 is not set
@@ -1936,10 +1897,7 @@ BR2_PACKAGE_LIBINPUT=y
 # BR2_PACKAGE_LIBNFC is not set
 # BR2_PACKAGE_LIBPCIACCESS is not set
 # BR2_PACKAGE_LIBPHIDGET is not set
-
-#
-# libpri needs a kernel to be built
-#
+# BR2_PACKAGE_LIBPRI is not set
 # BR2_PACKAGE_LIBQMI is not set
 # BR2_PACKAGE_LIBRAW1394 is not set
 # BR2_PACKAGE_LIBRTLSDR is not set
@@ -1948,10 +1906,7 @@ BR2_PACKAGE_LIBINPUT=y
 # BR2_PACKAGE_LIBSIGROK is not set
 # BR2_PACKAGE_LIBSIGROKDECODE is not set
 # BR2_PACKAGE_LIBSOC is not set
-
-#
-# libss7 needs a kernel to be built
-#
+# BR2_PACKAGE_LIBSS7 is not set
 BR2_PACKAGE_LIBUSB=y
 # BR2_PACKAGE_LIBUSB_COMPAT is not set
 # BR2_PACKAGE_LIBUSBGX is not set
@@ -2077,10 +2032,7 @@ BR2_PACKAGE_LIBVPX=y
 # BR2_PACKAGE_ALLJOYN_TCL_BASE is not set
 # BR2_PACKAGE_AZMQ is not set
 # BR2_PACKAGE_AZURE_IOT_SDK_C is not set
-
-#
-# batman-adv needs a Linux kernel to be built
-#
+# BR2_PACKAGE_BATMAN_ADV is not set
 # BR2_PACKAGE_C_ARES is not set
 BR2_PACKAGE_CANFESTIVAL_ARCH_SUPPORTS=y
 # BR2_PACKAGE_CANFESTIVAL is not set
@@ -2269,7 +2221,7 @@ BR2_PACKAGE_LIBBSD_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBCROCO is not set
 # BR2_PACKAGE_LIBCROSSGUID is not set
 # BR2_PACKAGE_LIBCSV is not set
-# BR2_PACKAGE_LIBDAEMON is not set
+BR2_PACKAGE_LIBDAEMON=y
 # BR2_PACKAGE_LIBEE is not set
 # BR2_PACKAGE_LIBEV is not set
 BR2_PACKAGE_LIBEVDEV=y
@@ -2286,6 +2238,7 @@ BR2_PACKAGE_LIBICAL=y
 BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 # BR2_PACKAGE_LIBNSPR is not set
 # BR2_PACKAGE_LIBPFM4 is not set
+BR2_PACKAGE_LIBPLATFORM=y
 # BR2_PACKAGE_LIBPLIST is not set
 BR2_PACKAGE_LIBPTHREAD_STUBS=y
 # BR2_PACKAGE_LIBPTHSEM is not set
@@ -2439,7 +2392,10 @@ BR2_PACKAGE_QEMU_ARCH_SUPPORTS_TARGET=y
 # BR2_PACKAGE_ARPTABLES is not set
 # BR2_PACKAGE_ASTERISK is not set
 # BR2_PACKAGE_ATFTP is not set
-# BR2_PACKAGE_AVAHI is not set
+# BR2_PACKAGE_AUTOSSH is not set
+BR2_PACKAGE_AVAHI=y
+BR2_PACKAGE_AVAHI_AUTOIPD=y
+# BR2_PACKAGE_AVAHI_DAEMON is not set
 # BR2_PACKAGE_AXEL is not set
 # BR2_PACKAGE_BABELD is not set
 # BR2_PACKAGE_BANDWIDTHD is not set
@@ -2472,11 +2428,23 @@ BR2_PACKAGE_BLUEZ5_UTILS_GATTTOOL=y
 # BR2_PACKAGE_DANTE is not set
 # BR2_PACKAGE_DARKHTTPD is not set
 # BR2_PACKAGE_DHCP is not set
-# BR2_PACKAGE_DHCPCD is not set
+BR2_PACKAGE_DHCPCD=y
 # BR2_PACKAGE_DHCPDUMP is not set
-# BR2_PACKAGE_DNSMASQ is not set
+BR2_PACKAGE_DNSMASQ=y
+BR2_PACKAGE_DNSMASQ_TFTP=y
+BR2_PACKAGE_DNSMASQ_DHCP=y
+# BR2_PACKAGE_DNSMASQ_DNSSEC is not set
+# BR2_PACKAGE_DNSMASQ_IDN is not set
+# BR2_PACKAGE_DNSMASQ_CONNTRACK is not set
 # BR2_PACKAGE_DRBD_UTILS is not set
-# BR2_PACKAGE_DROPBEAR is not set
+BR2_PACKAGE_DROPBEAR=y
+# BR2_PACKAGE_DROPBEAR_CLIENT is not set
+# BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS is not set
+BR2_PACKAGE_DROPBEAR_SMALL=y
+# BR2_PACKAGE_DROPBEAR_WTMP is not set
+# BR2_PACKAGE_DROPBEAR_LASTLOG is not set
+# BR2_PACKAGE_DROPBEAR_LEGACY_CRYPTO is not set
+BR2_PACKAGE_DROPBEAR_LOCALOPTIONS_FILE=""
 # BR2_PACKAGE_EBTABLES is not set
 
 #
@@ -2493,7 +2461,7 @@ BR2_PACKAGE_BLUEZ5_UTILS_GATTTOOL=y
 # BR2_PACKAGE_FLANNEL is not set
 BR2_PACKAGE_FPING=y
 # BR2_PACKAGE_FREESWITCH is not set
-# BR2_PACKAGE_GESFTPSERVER is not set
+BR2_PACKAGE_GESFTPSERVER=y
 # BR2_PACKAGE_GLORYTUN is not set
 
 #
@@ -2501,7 +2469,14 @@ BR2_PACKAGE_FPING=y
 #
 # BR2_PACKAGE_HANS is not set
 # BR2_PACKAGE_HIAWATHA is not set
-# BR2_PACKAGE_HOSTAPD is not set
+BR2_PACKAGE_HOSTAPD=y
+# BR2_PACKAGE_HOSTAPD_DRIVER_RTW is not set
+BR2_PACKAGE_HOSTAPD_ACS=y
+# BR2_PACKAGE_HOSTAPD_EAP is not set
+# BR2_PACKAGE_HOSTAPD_WPS is not set
+BR2_PACKAGE_HOSTAPD_VLAN=y
+BR2_PACKAGE_HOSTAPD_VLAN_DYNAMIC=y
+BR2_PACKAGE_HOSTAPD_VLAN_NETLINK=y
 # BR2_PACKAGE_HTTPING is not set
 # BR2_PACKAGE_IBRDTN_TOOLS is not set
 # BR2_PACKAGE_IBRDTND is not set
@@ -2509,16 +2484,13 @@ BR2_PACKAGE_FPING=y
 # BR2_PACKAGE_IFPLUGD is not set
 # BR2_PACKAGE_IFTOP is not set
 # BR2_PACKAGE_IFUPDOWN is not set
-# BR2_PACKAGE_IFUPDOWN_SCRIPTS is not set
+BR2_PACKAGE_IFUPDOWN_SCRIPTS=y
 # BR2_PACKAGE_IGD2_FOR_LINUX is not set
-
-#
-# igh-ethercat needs a Linux kernel to be built
-#
+# BR2_PACKAGE_IGH_ETHERCAT is not set
 # BR2_PACKAGE_IGMPPROXY is not set
 # BR2_PACKAGE_INADYN is not set
 # BR2_PACKAGE_IODINE is not set
-# BR2_PACKAGE_IPERF is not set
+BR2_PACKAGE_IPERF=y
 # BR2_PACKAGE_IPERF3 is not set
 # BR2_PACKAGE_IPROUTE2 is not set
 # BR2_PACKAGE_IPSEC_TOOLS is not set
@@ -2527,7 +2499,7 @@ BR2_PACKAGE_FPING=y
 # BR2_PACKAGE_IPTRAF_NG is not set
 # BR2_PACKAGE_IPUTILS is not set
 # BR2_PACKAGE_IRSSI is not set
-# BR2_PACKAGE_IW is not set
+BR2_PACKAGE_IW=y
 # BR2_PACKAGE_JANUS_GATEWAY is not set
 # BR2_PACKAGE_KEEPALIVED is not set
 # BR2_PACKAGE_KISMET is not set
@@ -2542,7 +2514,7 @@ BR2_PACKAGE_FPING=y
 # BR2_PACKAGE_LINUX_ZIGBEE is not set
 # BR2_PACKAGE_LINUXPTP is not set
 # BR2_PACKAGE_LLDPD is not set
-# BR2_PACKAGE_LRZSZ is not set
+BR2_PACKAGE_LRZSZ=y
 # BR2_PACKAGE_LYNX is not set
 # BR2_PACKAGE_MACCHANGER is not set
 # BR2_PACKAGE_MEMCACHED is not set
@@ -2668,16 +2640,28 @@ BR2_PACKAGE_MONGREL2_LIBC_SUPPORTS=y
 # BR2_PACKAGE_WHOIS is not set
 # BR2_PACKAGE_WIREGUARD is not set
 # BR2_PACKAGE_WIRELESS_REGDB is not set
-# BR2_PACKAGE_WIRELESS_TOOLS is not set
+BR2_PACKAGE_WIRELESS_TOOLS=y
+# BR2_PACKAGE_WIRELESS_TOOLS_LIB is not set
 # BR2_PACKAGE_WIRESHARK is not set
-# BR2_PACKAGE_WPA_SUPPLICANT is not set
+BR2_PACKAGE_WPA_SUPPLICANT=y
+BR2_PACKAGE_WPA_SUPPLICANT_NL80211=y
+BR2_PACKAGE_WPA_SUPPLICANT_AP_SUPPORT=y
+# BR2_PACKAGE_WPA_SUPPLICANT_WIFI_DISPLAY is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_MESH_NETWORKING is not set
+BR2_PACKAGE_WPA_SUPPLICANT_AUTOSCAN=y
+BR2_PACKAGE_WPA_SUPPLICANT_EAP=y
+# BR2_PACKAGE_WPA_SUPPLICANT_HOTSPOT is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_DEBUG_SYSLOG is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_WPS is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_CLI is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_WPA_CLIENT_SO is not set
+BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE=y
+# BR2_PACKAGE_WPA_SUPPLICANT_DBUS_OLD is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_DBUS_NEW is not set
 # BR2_PACKAGE_WPAN_TOOLS is not set
 # BR2_PACKAGE_XINETD is not set
 # BR2_PACKAGE_XL2TP is not set
-
-#
-# xtables-addons needs a Linux kernel to be built
-#
+# BR2_PACKAGE_XTABLES_ADDONS is not set
 # BR2_PACKAGE_ZNC is not set
 
 #
@@ -2819,10 +2803,7 @@ BR2_PACKAGE_COREUTILS=y
 # BR2_PACKAGE_EFIBOOTMGR is not set
 BR2_PACKAGE_EFIVAR_ARCH_SUPPORTS=y
 # BR2_PACKAGE_EFIVAR is not set
-
-#
-# emlog needs a Linux kernel to be built
-#
+# BR2_PACKAGE_EMLOG is not set
 # BR2_PACKAGE_FTOP is not set
 # BR2_PACKAGE_GETENT is not set
 # BR2_PACKAGE_HTOP is not set
@@ -2966,7 +2947,7 @@ BR2_PACKAGE_DEVILUTIONX=y
 #
 # BR2_PACKAGE_MAME is not set
 # BR2_PACKAGE_MELONDS is not set
-# BR2_PACKAGE_MOONLIGHT_EMBEDDED is not set
+BR2_PACKAGE_MOONLIGHT_EMBEDDED=y
 # BR2_PACKAGE_MUPEN64PLUS_AUDIO_SDL is not set
 # BR2_PACKAGE_MUPEN64PLUS_CORE is not set
 # BR2_PACKAGE_MUPEN64PLUS_GLES2 is not set
@@ -3092,10 +3073,7 @@ BR2_PACKAGE_BATOCERA_EMULATIONSTATION_STANDARD=y
 # BR2_TARGET_ROOTFS_CPIO is not set
 # BR2_TARGET_ROOTFS_CRAMFS is not set
 # BR2_TARGET_ROOTFS_EXT2 is not set
-
-#
-# initramfs needs a Linux kernel to be built
-#
+# BR2_TARGET_ROOTFS_INITRAMFS is not set
 # BR2_TARGET_ROOTFS_JFFS2 is not set
 # BR2_TARGET_ROOTFS_ROMFS is not set
 BR2_TARGET_ROOTFS_SQUASHFS=y
@@ -3126,7 +3104,44 @@ BR2_TARGET_ROOTFS_TAR_OPTIONS=""
 # BR2_TARGET_MXS_BOOTLETS is not set
 # BR2_TARGET_S500_BOOTLOADER is not set
 # BR2_TARGET_TS4800_MBRBOOT is not set
-# BR2_TARGET_UBOOT is not set
+BR2_TARGET_UBOOT=y
+BR2_TARGET_UBOOT_BUILD_SYSTEM_LEGACY=y
+# BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG is not set
+BR2_TARGET_UBOOT_BOARDNAME="wx8-rk3128"
+# BR2_TARGET_UBOOT_LATEST_VERSION is not set
+# BR2_TARGET_UBOOT_CUSTOM_VERSION is not set
+# BR2_TARGET_UBOOT_CUSTOM_TARBALL is not set
+BR2_TARGET_UBOOT_CUSTOM_GIT=y
+# BR2_TARGET_UBOOT_CUSTOM_HG is not set
+# BR2_TARGET_UBOOT_CUSTOM_SVN is not set
+BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/mcerveny/caesar-u-boot.git"
+BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="96fcbc5e0fc1a69d10f71d4b8f00a120af509781"
+BR2_TARGET_UBOOT_VERSION="96fcbc5e0fc1a69d10f71d4b8f00a120af509781"
+BR2_TARGET_UBOOT_PATCH=""
+# BR2_TARGET_UBOOT_NEEDS_DTC is not set
+# BR2_TARGET_UBOOT_NEEDS_PYLIBFDT is not set
+# BR2_TARGET_UBOOT_NEEDS_OPENSSL is not set
+
+#
+# U-Boot binary format
+#
+# BR2_TARGET_UBOOT_FORMAT_AIS is not set
+BR2_TARGET_UBOOT_FORMAT_BIN=y
+# BR2_TARGET_UBOOT_FORMAT_DTB_BIN is not set
+# BR2_TARGET_UBOOT_FORMAT_DTB_IMG is not set
+# BR2_TARGET_UBOOT_FORMAT_IMG is not set
+# BR2_TARGET_UBOOT_FORMAT_IMX is not set
+# BR2_TARGET_UBOOT_FORMAT_NAND_BIN is not set
+# BR2_TARGET_UBOOT_FORMAT_KWB is not set
+# BR2_TARGET_UBOOT_FORMAT_ELF is not set
+# BR2_TARGET_UBOOT_FORMAT_SB is not set
+# BR2_TARGET_UBOOT_FORMAT_SD is not set
+# BR2_TARGET_UBOOT_FORMAT_NAND is not set
+# BR2_TARGET_UBOOT_FORMAT_CUSTOM is not set
+# BR2_TARGET_UBOOT_OMAP_IFT is not set
+# BR2_TARGET_UBOOT_SPL is not set
+# BR2_TARGET_UBOOT_ENVIMAGE is not set
+# BR2_TARGET_UBOOT_BOOT_SCRIPT is not set
 
 #
 # Host utilities
@@ -3227,9 +3242,6 @@ BR2_PACKAGE_HOST_UTIL_LINUX=y
 #
 # Legacy options removed in 2018.02
 #
-# BR2_KERNEL_HEADERS_3_4 is not set
-# BR2_KERNEL_HEADERS_3_10 is not set
-# BR2_KERNEL_HEADERS_3_12 is not set
 # BR2_BINUTILS_VERSION_2_27_X is not set
 # BR2_PACKAGE_EEPROG is not set
 # BR2_PACKAGE_GNUPG2_GPGV2 is not set
@@ -3345,6 +3357,9 @@ BR2_TARGET_ROOTFS_EXT2_EXTRA_BLOCKS=0
 # BR2_GCC_VERSION_4_7_X is not set
 # BR2_BINUTILS_VERSION_2_24_X is not set
 # BR2_PACKAGE_WESTON_RPI is not set
+# BR2_LINUX_KERNEL_TOOL_CPUPOWER is not set
+# BR2_LINUX_KERNEL_TOOL_PERF is not set
+# BR2_LINUX_KERNEL_TOOL_SELFTESTS is not set
 # BR2_GCC_VERSION_4_8_ARC is not set
 # BR2_KERNEL_HEADERS_4_0 is not set
 # BR2_KERNEL_HEADERS_3_19 is not set
