--- a/buildroot/package/Config.in
+++ b/buildroot/package/Config.in
@@ -1207,6 +1207,7 @@ menu "Hardware handling"
 	source "package/libaio/Config.in"
 	source "package/libatasmart/Config.in"
 	source "package/libcec/Config.in"
+	source "package/libenet/Config.in"
 	source "package/libfreefare/Config.in"
 	source "package/libftdi/Config.in"
 	source "package/libftdi1/Config.in"
